# grax

./: .gitignore  Cargo.toml  README.md  flake.nix  graph.py  justfile
data/: Kostenminimal_gross3.txt
grax/: Cargo.toml
grax-algorithms/: Cargo.toml
grax-algorithms/src/: bellman_ford.rs  bfs.rs  branch_bound.rs  brute_force.rs  capacity_scaling.rs  category.rs  cdcl.rs  cycle.rs  dfs.rs  dijkstra.rs  distances.rs  double_tree.rs  edmonds_karp.rs  flow.rs  ford_fulkerson.rs  kruskal.rs  lib.rs  mcf.rs  nearest_neighbor.rs  path.rs  prim.rs  test.rs  tree.rs  weight.rs
grax-algorithms/src/algorithms/: bellman_ford.rs  bfs.rs  branch_bound.rs  brute_force.rs  cycle_canceling.rs  dfs.rs  dijkstra.rs  double_tree.rs  edmonds_karp.rs  ford_fulkerson.rs  kahn.rs  kruskal.rs  mod.rs  nearest_neighbor.rs  prim.rs  ssp.rs  union_find.rs
grax-algorithms/src/problems/: mcf.rs  mod.rs  mst.rs  path.rs  shortest_path.rs  tsp.rs
grax-algorithms/src/util/: cycle.rs  distances.rs  mod.rs  mst.rs  parents.rs  path.rs  route.rs  shortest_path.rs  tree.rs
grax-algorithms/src/utility/: distances.rs  mod.rs  parents.rs
grax-algorithms/src/view.bak/: mod.rs  tree.rs
grax-collections/: Cargo.toml
grax-collections/src/: lib.rs
grax-collections/src/soft_heap/: heap.rs  mod.rs  node.rs  tree.rs
grax-core/: Cargo.toml
grax-core/src/: algorithms.rs  collections.rs  edge.rs  graph.rs  index.rs  lib.rs  node.rs  parse.rs  traits.rs  weight.rs
grax-core/src/adaptor/: flow.rs  id.rs  mod.rs  network.rs  partial.rs
grax-core/src/edge/: constraints.rs  mod.rs  weight.rs
grax-core/src/node/: mod.rs  weight.rs
grax-core/src/variant/: balance.rs  connected.rs  flow.rs  mod.rs
grax-core/src/view/: distances.rs  graph.rs  mod.rs  parents.rs  route.rs  union_find.rs
grax-core/src/view/filter/: edge.rs  mod.rs  node.rs
grax-dir/: Cargo.toml
grax-dir/src/: lib.rs
grax-disk/: Cargo.toml
grax-disk/src/: edge.rs  error.rs  lib.rs  node.rs
grax-flow/: Cargo.toml
grax-flow/src/: adaptor.rs  lib.rs
grax-impl/: Cargo.toml
grax-impl/benches/: edge_storage.rs
grax-impl/src/: edge_list.rs  error.rs  flow.rs  lib.rs  test.rs
grax-impl/src/edges/: adj.rs  boolean.rs  csr.rs  fixed.rs  hash.rs  mat.rs  mod.rs  test.rs
grax-impl/src/graph/: attr.rs  connected.rs  conversion.rs  graph.rs  mod.rs  parse.rs  test.rs
grax-impl/src/matrix/: csr.rs  dense.rs  ellpack.rs  mod.rs  sparse.rs
grax-impl/src/memory/: adj_graph.rs  adjacency_list.rs  mat_graph.rs  mod.rs
grax-impl/src/memory/adjacency_matrix/: matrix.rs  mod.rs
grax-impl/src/nodes/: boolean.rs  fixed.rs  mod.rs  optional.rs  ordered.rs  slab.rs  stable.rs  unstable.rs
grax-impl/src/storage/: adj.rs  csr.rs  dense.rs  directory.rs  hash.rs  mod.rs  sparse.rs  test.rs
grax-query/: Cargo.toml
grax-query/src/: delete.rs  insert.rs  lib.rs  select.rs  update.rs
grax-query/src/adaptor/: mod.rs
grax/src/: lib.rs  main.rs.bak
src/: adjacency_list.rs  deser.rs  edge.rs  edge_list.rs  error.rs  lib.rs  main.rs  structure.rs  tree.rs  utils.rs
src/adjacency_list/: mod.rs  test.rs
src/adjacency_matrix/: mod.rs
src/algorithms/: bellman_ford.rs  bfs.rs  branch_bound.rs  brute_force.rs  capacity_scaling.rs  cycle_canceling.rs  dfs.rs  dijkstra.rs  double_tree.rs  edmonds_karp.rs  ford_fulkerson.rs  kruskal.rs  mcf.rs  mod.rs  nearest_neighbor.rs  prim.rs  search.rs  ssp.rs  union_find.rs
src/graph/: access.rs  adjacency_matrix.rs  data_provider.rs  edge.rs  index.rs  mod.rs  mst.rs  node.rs  residual_graph.rs  search.rs  test.rs  topology.rs  traits.rs  tsp.rs  weight.rs
src/graph/adjacency_list/: mod.rs  test.rs
src/graph_impl/: adjacency_list.rs  adjacency_matrix.rs  base.rs  index.rs  mod.rs  residual_graph.rs  tree.rs
src/structures/: distances.rs  matrix.rs  mod.rs  parents.rs  route.rs  tour.rs  tree.rs
