[package]
name = "grph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
priq = "0.2.0"
more-asserts = "0.3.1"
permute = "0.2.1"
either = "1.8.1"
petgraph = "0.6.3"
pathfinding = "4.3.0"
smallvec = "1.10.0"

[features]
extensive = []