[workspace]
resolver = "2"
members = [
    "grax",
    "grax-algorithms",
    "grax-core",
    "grax-query",
    "grax-impl",
    "grax-flow",
]


[profile.release]
debug = true

# [profile.bench]
# opt-level = 3
# debug = true
# rpath = false
# lto = true
# debug-assertions = false
# codegen-units = 1
