[package]
name = "grax-algorithms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grax-core = { path = "../grax-core" }
priq = "0.2.0"
permute = "0.2.1"
either = "1.8.1"
more-asserts = "0.3.1"
num-traits = "0.2.15"

[dev-dependencies]
grax-impl = { path = "../grax-impl" }
