[package]
name = "grax-algorithms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grax-core = { path = "../grax-core" }
grax-flow = { path = "../grax-flow" }
priq = "0.2.0"
permute = "0.2.1"
either = "1.8.1"
more-asserts = "0.3.1"
num-traits = "0.2.15"
rayon = "1.8.0"
# dary_heap = "0.3.6"
orx-priority-queue = "1.0.0"
itertools = "0.13.0"

[dev-dependencies]
grax-impl = { path = "../grax-impl" }

[features]
extensive = []
