[package]
name = "grax-algorithms"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grax-core.workspace = true
priq.workspace = true
permute.workspace = true
either.workspace = true
more-asserts.workspace = true
# num-traits.workspace = true
rayon.workspace = true
# dary_heap = "0.3.6"
orx-priority-queue.workspace = true
itertools.workspace = true

[dev-dependencies]
grax-impl.workspace = true

[features]
extensive = []
