[package]
name = "grax-impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grax-core = { path = "../grax-core" }
grax-flow = { path = "../grax-flow" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"
more-asserts = "0.3.1"
stable-vec = "0.4.0"
bitvec = "1.0.1"
rayon = "1.8.0"

[dev-dependencies]
criterion = "0.5.1"
