[package]
name = "grax-impl"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grax-core.workspace = true
serde.workspace = true
more-asserts.workspace = true
stable-vec.workspace = true
bitvec.workspace = true
rayon.workspace = true
itertools.workspace = true

[dev-dependencies]
criterion = "0.5.1"

[features]
default = []
nightly = []
