[package]
name = "grax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grax-disk = { path = "../grax-disk" }
grax-core = { path = "../grax-core" }
grax-impl = { path = "../grax-impl" }
grax-algorithms = { path = "../grax-algorithms" }
grax-query = { path = "../grax-query" }
